maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:18: error: value update is not a member of plm.universe.Direction
  while (getDirection()=Direction.EAST && estFaceMur()==false) {
         ^IslandMaze:18: error: value && is not a member of plm.universe.Direction
  while (getDirection()=Direction.EAST && estFaceMur()==false) {
                                       ^